src/test/compile-fail/issue-3099-b.rs
mod a {}

mod a {} //~ ERROR Duplicate definition of module a

fn main() {}
